--- a/LAB_02/notebookL2.ipynb
+++ b/LAB_02/notebookL2.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,8 @@
      "text": [
       "<class 'tuple'>\n",
       "(1, 2, 3, 4, 5)\n",
-      "1\n"
+      "1\n",
+      "(5, 4, 3, 2, 1)\n"
      ]
     }
    ],
@@ -87,8 +88,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.12.1"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
